# chewing-editor

./: .chewing.json.swp  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  chewing-editor.desktop  chewing-editor.desktop.in  chewing-editor.h2m  config.h.in
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
cmake/: c_flag_overrides.cmake  config.h.in  cxx_flag_overrides.cmake  platform_apple.cmake
qml/: ChewingEditor.qml
rc/: chewing-editor.icns  chewing-editor.rc  resources.qrc
rc/macosx/English.lproj/: InfoPlist.strings
rc/macosx/zh_TW.lproj/: InfoPlist.strings  locversion.plist
scripts/: generate_ico.sh  lcov.sh
src/: ChewingEditor.cpp  ChewingEditor.h  ChewingEditor.ui  ChewingUserphraseModel.cpp  ChewingUserphraseModel.h  UserphraseModel.cpp  UserphraseModel.h  chewingeditor.cpp  chewingeditor.h  chewingeditor.ui  chewinguserphrasemodel.cpp  chewinguserphrasemodel.h  main.cpp
src/exporter/: ChewingExporter.cpp  ChewingExporter.h  UserphraseExporter.cpp  UserphraseExporter.h
src/importer/: ChewingImporter.cpp  ChewingImporter.h  HashImporter.cpp  HashImporter.h  UserphraseImporter.cpp  UserphraseImporter.h
src/model/: CommitHistoryModel.cpp  CommitHistoryModel.h  UserphraseModel.cpp  UserphraseModel.h  UserphraseSortFilterProxyModel.cpp  UserphraseSortFilterProxyModel.h
src/ui/: AboutDialog.ui  AddNewPhraseDialog.cpp  AddNewPhraseDialog.h  AddNewPhraseDialog.ui  ChewingEditor.cpp  ChewingEditor.h  ChewingEditor.ui  RemoveUserphraseDialog.cpp  RemoveUserphraseDialog.h  RemoveUserphraseDialog.ui  UserphraseDeleteDialog.ui  UserphraseDialog.ui  UserphraseView.cpp  UserphraseView.h  UserphraseViewMenu.ui
src/uploader/: CommitHistoryUploader.cpp  CommitHistoryUploader.h
src/userphrase/: DefaultUserphraseData.cpp  DefaultUserphraseData.h  Userphrase.cpp  Userphrase.h  UserphraseData.cpp  UserphraseData.h  UserphraseModel.cpp  UserphraseModel.h  UserphraseModelFactory.cpp  UserphraseModelFactory.h  UserphraseSortFilterProxyModel.cpp  UserphraseSortFilterProxyModel.h
src/util/: BopomofoUtil.hpp  CommitHistory.cpp  CommitHistory.h  CommitHistorySet.cpp  CommitHistorySet.h  Userphrase.cpp  Userphrase.h  UserphraseSet.cpp  UserphraseSet.h
src/view/: AboutDialog.cpp  AboutDialog.h  AddNewPhraseDialog.cpp  AddNewPhraseDialog.h  ChewingEditor.cpp  ChewingEditor.h  CommitHistoryView.cpp  CommitHistoryView.h  ImportDialog.cpp  ImportDialog.h  Notification.cpp  Notification.h  UserphraseDeleteDialog.cpp  UserphraseDeleteDialog.h  UserphraseDialog.cpp  UserphraseDialog.h  UserphraseView.cpp  UserphraseView.h  UserphraseViewMenu.cpp  UserphraseViewMenu.h
test/: testBopomofoUtil.cpp  testChewingExporter.cpp  testChewingImporter.cpp  testHashImporter.cpp  testUserphrase.cpp  testUserphraseImporter.cpp  testUserphraseSet.cpp  testmain.cpp
test/data/import/: chewing_one_phrase.json
test/data/import/broken/: phrase_not_object.json  root_not_object.json  userphrase_not_array.json
test/data/import/json/: chewing_one_valid_phrase.json
test/data/import/uhash.dat/broken/: corrupted_chewing_lifetime  corrupted_signature  wrong_signature
ts/: chewing-editor_en_US.ts  chewing-editor_zh_TW.ts  ts.qrc
